Spelling error fixed

--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
             <h4 class="text-secondary">(Fully Responsive/Mobile First Design)</h4>
               </a>
               <img class="img-fluid mb-5" src="img/portfolio/myapply.jpg" alt="">
-              <h4 class="mb-5"> <a href="https://myapply.herokuapp.com/" target="_blank"> MyApply </a> is a solo a solo project built with Ruby, Ruby on Rails, HTML, CSS, PostgreSQL, Git/Github, Trello, and uses all HTTP verbs, while following RESTful methodolgies.
+              <h4 class="mb-5"> <a href="https://myapply.herokuapp.com/" target="_blank"> MyApply </a> is a solo project built with Ruby, Ruby on Rails, HTML, CSS, PostgreSQL, Git/Github, Trello, and uses all HTTP verbs, while following RESTful methodolgies.
               </h4>
 <hr>
             <h4 class="mb-5">
-                <a href="https://myapply.herokuapp.com/" target="_blank"> MyApply </a> archieves user input regarding job application information and stores it in a PostgreSQL database. It keeps track of the date applied, what jobs have been applied to, the number of jobs a user applied to, and allows users to add additional notes about each job/job application.
+                <a href="https://myapply.herokuapp.com/" target="_blank"> MyApply </a> archives user input regarding job application information and stores it in a PostgreSQL database. It keeps track of the date applied, what jobs have been applied to, the number of jobs a user applied to, and allows users to add additional notes about each job/job application.
             </h4>
 <hr>
 <br>
@@ -629,7 +629,7 @@
           <a href="http://fit360.herokuapp.com/" target="_blank">Fit 360</a> is a group project built with Ruby, Ruby on Rails, JavaScript, PostgreSQL, AWS, Google Maps API, Axios HTTP Client, HTML, CSS, Bootstrap, Trello, Git/GitHub, Bcrypt, and RESTful methodologies.
         </h4>
         <h4 class="mb-5">
-          <a href="http://fit360.herokuapp.com/" target="_blank">Fit360</a>, an alternitive to the gym. The social media platform and fitness hub where personal trainers/instructors can add their fitness courses for the world to see. Course locations are stored on a map for public browsing. Sign up as an Athlete to buy courses or sign up as a personal trainer, post courses and eliminate the previously inevetiable awkward payment conversations. App is mobile responsive.
+          <a href="http://fit360.herokuapp.com/" target="_blank">Fit360</a>, an alternative to the gym. The social media platform and fitness hub where personal trainers/instructors can add their fitness courses for the world to see. Course locations are stored on a map for public browsing. Sign up as an Athlete to buy courses or sign up as a personal trainer, post courses and eliminate the previously inevitable awkward payment conversations. App is mobile responsive.
         </h4>
             <hr>
             <br>
