Added Element Scraper with corresponding modal to page

--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@
         <div class="row">
 
 
+          <!-- Element Scraper Begin  -->
+          <div class="col-md-6 col-lg-4">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-8">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <h3 class="text-center"> Element Scraper</h3>
+              <h5 class="text-center"> (Stable Release 10/2/18)</h5>
+              <img class="img-fluid" src="img/portfolio/web_scraping.jpeg" alt="element-scraper-cover-photo">
+            </a>
+          </div>
+        <!-- Element Scraper End  -->
+
+
           <!-- Fit360 Begin  -->
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
@@ -693,6 +709,45 @@
 
 
 
+<!-- Portfolio Modal 8 --> <!--  Element Scraper -->
+<div class="portfolio-modal mfp-hide" id="portfolio-modal-8">
+  <div class="portfolio-modal-dialog bg-white">
+    <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+      <i class="fa fa-3x fa-times"></i>
+    </a>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+                <!--  Element Scraper -->
+
+    <a href="https://elementscraper.herokuapp.com/" target="_blank">  <h2 class="text-secondary mb-0"> Element Scraper </h2>
+      <img class="img-fluid mb-5" src="img/portfolio/web_scraping.jpeg" alt="">
+
+    </a>
+    <img class="img-fluid mb-5" src="img/portfolio/web_scraper.jpg" alt="">
+    <h4 class="mb-5">
+      <a href="http://elementscraper.herokuapp.com/" target="_blank">Element Scraper</a> is a solo project built with Ruby, Ruby on Rails, PostgreSQL, HTML, CSS, Bootstrap, Git/GitHub.
+    </h4>
+    <h4 class="mb-5">
+      <a href="http://elementscraper.herokuapp.com/" target="_blank">Element Scraper</a> , is a mobile friendly web application that scrapes your favorite websites and displays the HTML element of your choice. It uses to the Ruby programming language to loop through each instance of the selected element and shows how many times it is used on the webpage as well as the content inside each instance of the element.
+    </h4>
+        <hr>
+        <br>
+    <h4 class="mb-5">
+    Click <a href="http://elementscraper.herokuapp.com/" target="_blank">Here</a>  to check out Element Scraper.
+    </h4>
+
+    <hr>
+                  <!-- Exit Button -->
+          <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+            <i class="fa fa-close"></i>
+            Close Project</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--  VeganEats End-->
 
 
 
