Updated "View my latest project" link.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <br>
         <br>
-        <a href="https://fit360.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View My Latest Project</a>
+        <a href="http://elementscraper.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View My Latest Project</a>
         <br>
         <br>
 
