Added FoodChooser to Portfolio

--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
 
   </head>
 
-  <!--  -->
-  <!--  -->
-  <!--  -->
-
   <body id="page-top">
 
     <!-- Navigation -->
@@ -113,27 +109,43 @@
 
         <br>
         <br>
-        <a href="http://elementscraper.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View My Latest Project</a>
+        <a href="http://foodchooser.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View My Latest Project</a>
         <br>
         <br>
 
         <div class="row">
 
 
-          <!-- Element Scraper Begin  -->
+          <!-- FoodChooser Begin  -->
           <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-8">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-9">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <h3 class="text-center"> Element Scraper</h3>
-              <h5 class="text-center"> (Stable Release 10/2/18)</h5>
-              <img class="img-fluid" src="img/portfolio/web_scraping.jpeg" alt="element-scraper-cover-photo">
+              <h3 class="text-center"> FoodChooser</h3>
+              <h5 class="text-center"> (Stable Release 10/22/18)</h5>
+              <img class="img-fluid" src="img/portfolio/food-chooser.jpeg" alt="FoodChooser-cover-photo">
             </a>
           </div>
-        <!-- Element Scraper End  -->
+        <!-- FoodChooser End  -->
+
+
+        <!-- Element Scraper Begin  -->
+        <div class="col-md-6 col-lg-4">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-8">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fa fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <h3 class="text-center"> Element Scraper</h3>
+            <h5 class="text-center"> (Stable Release 10/2/18)</h5>
+            <img class="img-fluid" src="img/portfolio/web_scraping.jpeg" alt="element-scraper-cover-photo">
+          </a>
+        </div>
+      <!-- Element Scraper End  -->
 
 
           <!-- Fit360 Begin  -->
@@ -747,7 +759,49 @@
     </div>
   </div>
 </div>
-<!--  VeganEats End-->
+<!--  Element Scraper End-->
+
+
+
+
+<!-- Portfolio Modal 9 --> <!--  FoodChooser-->
+<div class="portfolio-modal mfp-hide" id="portfolio-modal-9">
+  <div class="portfolio-modal-dialog bg-white">
+    <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+      <i class="fa fa-3x fa-times"></i>
+    </a>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+                <!--  FoodChooser-->
+
+    <a href="https://foodchooser.herokuapp.com/" target="_blank">  <h2 class="text-secondary mb-0"> FoodChooser</h2>
+      <img class="img-fluid mb-5" src="img/portfolio/food-chooser.jpeg" style="width:50%;" alt="">
+
+    </a>
+    <h4 class="mb-5">
+      <a href="http://foodchooser.herokuapp.com/" target="_blank">FoodChooser</a> is a solo web application made with Ruby, Ruby on Rails, PostgreSQL, HTML, CSS, Bootstrap, Git/GitHub.
+    </h4>
+    <h4 class="mb-5">
+      <a href="http://foodchooser.herokuapp.com/" target="_blank">FoodChooser</a> is a mobile friendly web application that solves the ongoing problem of deciding where to eat. Enter your favorite Restaurants and have FoodChooser randomly generate a choice for you. A PostgreSQL database renders the data via RESTful API. FoodChooser not only uses nested routes/resources but, also follows best practice by using shallow nesting as well.
+    </h4>
+        <hr>
+        <br>
+    <h4 class="mb-5">
+    Click <a href="http://foodchooser.herokuapp.com/" target="_blank">Here</a>  to check out FoodChooser.
+    </h4>
+
+    <hr>
+                  <!-- Exit Button -->
+          <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+            <i class="fa fa-close"></i>
+            Close Project</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--  FoodChooserEnd -->
 
 
 
