Updating links to https for secure connection

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <!-- Latest Project -->
         <div class="container">
         <br> <br>
-        <a href="http://property-buddy.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View Latest Project (In Progress)</a>
+        <a href="https://property-buddy.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View Latest Project (In Progress)</a>
         <br><br>
         </div>
 <!-- Latest Project -->
