Adding PropertyBuddy project, relinking view latest project to VidKeywordScroper, and fixing placement of LYB cover photo on index

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
         <br>
-        <h6 class="text-center  text-secondary mb-0">(Most projects are hosted on Heroku. Please allow a few extra seconds for applications to load.)</h6>
+        <h6 class="text-center  text-secondary mb-0">(Most projects are hosted on free servers. Please allow a few extra seconds for applications to load.)</h6>
 
 
 <!-- Latest Project -->
         <div class="container">
         <br> <br>
-        <a href="https://property-buddy.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View Latest Project (In Progress)</a>
+        <a href="https://youtube-keyword-scraper.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View Latest Project (In Progress)</a>
         <br><br>
         </div>
 <!-- Latest Project -->
@@ -111,6 +111,24 @@
 
 
         <div class="row">
+
+<!-- Property Buddy   -->
+                  <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item d-block mx-auto" href="#property-buddy-modal">
+                      <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                          <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                      </div>
+                      <h3 class="text-center"> PropertyBuddy </h3>
+                      <h5 class="text-center"> </h5>
+                      <span style="padding-right:5em;"></span>
+                      <img class="img-fluid" style="width:60%; height:60%;" src="img/portfolio/property-buddy.png" alt="property-buddy-cover-photo">
+                    </a>
+                  </div>
+<!-- Property Buddy   -->
+
+
 <!-- Life's Your Beach   -->
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#lifesyourbeach-modal">
@@ -121,7 +139,7 @@
             </div>
             <h3 class="text-center"> Life's Your Beach</h3>
             <h5 class="text-center"> </h5>
-            <img class="img-fluid" src="img/portfolio/lifesyourbeachlogo-float-right.png" alt="Lifes-Your-Beach-cover-photo">
+            <img class="img-fluid" style="padding-top:5%; padding-left:7%;" src="img/portfolio/lifesyourbeachlogo-float-right.png" alt="Lifes-Your-Beach-cover-photo">
           </a>
         </div>
 <!-- Life's Your Beach   -->
@@ -382,8 +400,8 @@
           <div class="col-md-4 mb-5 mb-lg-0">
 <!--  Bottom Left Footer -->
   <!-- <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p> -->
+            <p class="lead mb-0">Sample Adress
+              <br>More sample address stuff</p> -->
           </div>
 
 <!--  -->
@@ -857,6 +875,54 @@
   </div>
 </div>
 <!--  Life's Your Beach-->
+
+<!--  Property Buddy-->
+<div class="portfolio-modal mfp-hide" id="property-buddy-modal">
+ <div class="portfolio-modal-dialog bg-white">
+   <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+     <i class="fa fa-3x fa-times"></i>
+   </a>
+   <div class="container text-center">
+     <div class="row">
+       <div class="col-lg-8 mx-auto">
+
+       <a href="https://property-buddy.herokuapp.com/" target="_blank">  <h2 class="text-secondary mb-0">PropertyBuddy</h2>
+         <img class="img-fluid mb-5" src="img/portfolio/property-buddy.png" style="width:50%;" alt="">
+       </a>
+
+       <h4 class="mb-5">
+         <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy </a> is a solo project built with Ruby, Ruby on Rails, PostgreSQL, JavaScript, jQuery, HTML, CSS, SCSS, Bootstrap, Git/GitHub, Bcrypt, the Google Maps API, Axios HTTP Client, Devise, and RESTful methodologies.
+       </h4>
+
+       <h4 class="mb-5">
+         <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy </a> revloutionizes both the home buying process as well as property management. When searching for a new property most people like to make a day out of it. When was the last time you were searching for a new property and only viewed one?
+       </h4>
+
+       <h4 class="mb-5">
+         <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy </a>  allows you to search one or many addresses, don't know the full address? Not a problem for <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy</a>! <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy </a>  will automatically fill out the text fields for you and then save your property on a map.
+       </h4>
+
+       <h4 class="mb-5">
+         View all saved properties on your dashboard or click a specific property to view a property individually. When it's time to visit your properties in person, select the directions tab. This will allow you to select as many saved properties as you like, press the Get Directions button and <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy </a>  will automatically generate the quickest routes to each selected Property in real time, it even takes traffic into account! Save time and energy while reducing frustration with <a href="https://property-buddy.herokuapp.com/" target="_blank">PropertyBuddy </a>!
+       </h4>
+
+           <hr>
+           <br>
+       <h4 class="mb-5">
+       Click <a href="https://property-buddy.herokuapp.com/" target="_blank">Here</a> to check out PropertyBuddy.
+       </h4>
+
+       <hr>
+           <!-- Exit Button -->
+         <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+         <i class="fa fa-close"></i>
+           Close Project</a>
+       </div>
+     </div>
+   </div>
+ </div>
+</div>
+<!--  Property Buddy-->
 
 
 <!-- Bootstrap core JavaScript -->
